[package]
name = "cloud-flight"
version = "0.1.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
resvg = "0.35.0"
tray-icon = "0.6.0"
usvg = "0.35.0"
tiny-skia = "0.11.1"
hex = "0.4"
num = "0.4"
num-derive = "0.4.0"
num-traits = "0.2"
clokwerk = "0.4.0"
ksni = "0.2.1"
log = { version = "0.4", features = ["max_level_info", "release_max_level_info"] }
hidapi = { version = "2.3.3", default-features = false, features = ["linux-shared-hidraw"] }
simple_logger = "4.2.0"
