[package]
name = "cloud-flight"
version = "0.1.5"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
log = { version = "0.4", features = [
    "max_level_info",
    "release_max_level_info",
] }
hidapi = { version = "2.3.3", default-features = false, features = [
    "linux-shared-hidraw",
] }
simple_logger = "4.2.0"
